--- a/example/index.css
+++ b/example/index.css
@@ -1,4 +1,4 @@
 /* ./example/index.css */
-@tailwind base;
-@tailwind components;
+/*@tailwind base;*/
+/*@tailwind components;*/
 @tailwind utilities;
